# FitMind

./: .gitignore  README.md
agent/: .env.example  README.md  alembic.ini  pyproject.toml
agent/alembic/: README  env.py
agent/alembic/versions/: 20250609_000001_init_fitmind_v1.py  20260610_000002_add_memory_system_v1.py  20260613_000003_add_workout_record_drafts.py  20260613_000004_add_intent_recognition_logs.py  20260613_000005_drop_nutrition_body_status_remark.py  20260614_000006_add_nutrition_record_drafts.py  20260615_000007_add_plan_body_status_drafts.py  20260615_000008_add_token_usage_logs.py  20260615_000009_allow_multiple_workout_records_per_day.py
agent/src/fitmind_agent/: main.py
agent/src/fitmind_agent/api/: __init__.py  app.py
agent/src/fitmind_agent/core/: config.py  llm.py
agent/src/fitmind_agent/db/: __init__.py  models.py  session.py
agent/src/fitmind_agent/graphs/: __init__.py  state.py  workflow.py
agent/src/fitmind_agent/mcp/: __init__.py  nutrition_server.py
agent/src/fitmind_agent/repositories/: __init__.py  intent.py  memory.py  nutrition.py  token_usage.py  workout.py
agent/src/fitmind_agent/schemas/: chat.py  intent.py  llm.py  memory.py  nutrition.py  plan.py  workout.py
agent/src/fitmind_agent/scripts/: init_mysql.py
agent/tests/: __init__.py  test_llm_schema.py  test_nutrition_incremental_persist.py  test_nutrition_react_tools.py  test_recent_health_summary_service.py  test_today_workout_recommendation_service.py  test_token_usage_tracker.py  test_workout_record_multiple_daily.py
dataset/: README.md
web/: package.json  (+1 more)
(+77 files in other folders)
