[project]
name = "fitmind-agent"
version = "0.1.0"
description = "FitMind Python agent service for LangGraph workflows and web integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "mcp>=1.0.0",
  "langchain-mcp-adapters>=0.1.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "pymysql>=1.1.1",
  "openai>=1.54.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
